exports[`Fieldset component renders as expected 1`] = `
<fieldset
  className="fFUjwm">
  <div>
    Fieldset child
  </div>
</fieldset>
`;

exports[`Fieldset component renders as expected with legendText 1`] = `
<fieldset
  className="fFUjwm">
  <legend
    className="efjiDS">
    I am legend
  </legend>
  <div>
    Fieldset child
  </div>
</fieldset>
`;
